objects/zkups__QueuedPackage__c.object
<CustomObject>
    <fields>
        <fullName>zkups__DeclaredValue__c</fullName>
        <label>Declared/Carriage Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__Height__c</fullName>
        <label>Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__Length__c</fullName>
        <label>Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__QueuedPackageSpecialServices__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Queued Package Special Services</label>
        <referenceTo>zkups__QueuedPackageSpecialServices__c</referenceTo>
        <relationshipLabel>UPS Queued Packages</relationshipLabel>
        <relationshipName>UPS_Queued_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkups__QueuedShipment__c</fullName>
        <label>Queued Shipment</label>
        <referenceTo>zkups__QueuedShipment__c</referenceTo>
        <relationshipLabel>UPS Queued Packages</relationshipLabel>
        <relationshipName>UPS_Queued_Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkups__Weight__c</fullName>
        <label>Weight</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkups__Width__c</fullName>
        <label>Width</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>UPS Queued Package</label>
    <nameField>
        <displayFormat>Queued-Package-{00000000}</displayFormat>
        <label>Queued Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS Queued Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>